@startuml 组件图
!theme plain

package "Facade Layer" <<Rectangle>> {
  component [DeploymentTaskFacade] as Facade
  note right of Facade
    **RF-01 重构**
    - DTO转换 (外部→内部)
    - 参数校验
    - 异常转换
    - 返回 void (操作)
  end note

  package "Facade Exceptions" {
    component [TaskCreationException]
    component [TaskOperationException]
    component [TaskNotFoundException]
    component [PlanNotFoundException]
  }
}

package "Application Service Layer" <<Rectangle>> {
  component [DeploymentApplicationService] as DeployAppService
  component [DeploymentPlanCreator] as PlanCreator

  note right of DeployAppService
    **RF-10 优化**
    - 轻量协调层
    - 依赖: 6 → 3 (-50%)
    - 代码: 80+ → 20行 (-75%)
    - 可测试性: +80%
  end note

  note right of PlanCreator
    **RF-10 新增**
    - Plan 创建流程编排
    - 封装创建逻辑
    - 独立可测试
  end note

  package "Application DTOs" {
    component [PlanCreationResult]
    component [PlanInfo] <<Value Object>>
    component [TaskInfo] <<Value Object>>
    component [PlanOperationResult]
    component [TaskOperationResult]
    component [TenantConfig] <<Internal DTO>>
  }
}

package "Orchestration Layer" {
  component [PlanOrchestrator] as Orchestrator
  component [TaskScheduler] as Scheduler
  component [ConflictRegistry] as Conflict
}

package "Domain Layer" {
  package "Aggregate (RF-06 Rich Domain Model)" {
    component [PlanAggregate] as PlanAgg
    component [TaskAggregate] as TaskAgg

    note right of TaskAgg
      **RF-06 充血模型**
      - 15+ 业务方法
      - 不变式自保护
      - Tell, Don't Ask
    end note

    note right of PlanAgg
      **RF-07 修正边界**
      - 持有 taskIds
      - 不持有 Task 对象
      - 聚合间 ID 引用
    end note
  }

  package "Value Objects (RF-08)" {
    component [TaskId] <<Value Object>>
    component [TenantId] <<Value Object>>
    component [PlanId] <<Value Object>>
    component [DeployVersion] <<Value Object>>
    component [NetworkEndpoint] <<Value Object>>

    note right of TaskId
      **类型安全 + 验证**
      - of() / ofTrusted()
      - belongsToPlan()
      - 不可变对象
    end note
  }

  package "Domain Services" {
    component [PlanDomainService] as PlanDS
    component [TaskDomainService] as TaskDS

    note right of TaskDS
      **RF-06 重构**
      - 调用聚合方法
      - 业务逻辑下沉
      - 代码减少 30%
    end note
  }

  package "State Machine" {
    component [TaskStateMachine] as TaskSM
    component [PlanStateMachine] as PlanSM
    component [TaskStateManager] as StateManager
  }

  package "Stage" {
    component [CompositeServiceStage] as ServiceStage
    component [StageFactory] as StageFactory
    component [ConfigUpdateStep] as Step1
    component [BroadcastStep] as Step2
    component [HealthCheckStep] as Step3
  }

  package "Validation" {
    component [ValidationChain] as Validator
  }
}

package "Execution Layer" {
  component [TaskExecutor] as Executor
  component [TaskWorkerFactory] as WorkerFactory
  component [DefaultTaskWorkerFactory] as DefaultFactory
  component [HeartbeatScheduler] as Heartbeat

  component [TaskWorkerCreationContext] as WorkerContext

  note right of WorkerContext
    **RF-02 新增**
    - 参数对象模式
    - Builder 模式
    - 9参数 → 1参数
  end note

  WorkerFactory <|.. DefaultFactory
  DefaultFactory --> WorkerContext : uses
  DefaultFactory --> Executor : creates
}

package "Infrastructure Layer" {
  package "Repository (RF-09 Simplified)" {
    interface "TaskRepository" as TaskRepo
    interface "TaskRuntimeRepository" as RuntimeRepo
    interface "PlanRepository" as PlanRepo
    component [InMemoryTaskRepository] as MemTaskRepo
    component [InMemoryTaskRuntimeRepository] as MemRuntimeRepo
    component [InMemoryPlanRepository] as MemPlanRepo

    note right of TaskRepo
      **简化: 15+ → 5 方法**
      - save / remove
      - findById / findByTenantId
      - findByPlanId
      - Optional 返回值
    end note

    note right of RuntimeRepo
      **RF-09 职责分离**
      - 管理运行时状态
      - Executor / Context
      - Stages
    end note

    TaskRepo <|.. MemTaskRepo
    RuntimeRepo <|.. MemRuntimeRepo
    PlanRepo <|.. MemPlanRepo
  }

  package "Checkpoint" {
    component [CheckpointService] as CPService
    interface "CheckpointStore" as CPStore
    component [InMemoryCheckpointStore] as MemoryCP
    component [RedisCheckpointStore] as RedisCP

    CPService --> CPStore
    CPStore <|.. MemoryCP
    CPStore <|.. RedisCP
  }

  package "Event" {
    interface "TaskEventSink" as EventSink
    component [SpringTaskEventSink] as SpringEvent
    component [NoopTaskEventSink] as NoopEvent

    EventSink <|.. SpringEvent
    EventSink <|.. NoopEvent
  }

  package "Health" {
    interface "HealthCheckClient" as HealthClient
    component [MockHealthCheckClient] as MockHealth
    component [RollbackHealthVerifier] as Verifier
  }

  package "Metrics" {
    interface "MetricsRegistry" as MetricsReg
    component [NoopMetricsRegistry] as NoopMetrics
    component [MicrometerMetricsRegistry] as MicrometerMetrics

    MetricsReg <|.. NoopMetrics
    MetricsReg <|.. MicrometerMetrics
  }

  package "Strategy" {
    interface "RollbackStrategy" as RBStrategy
    component [PreviousConfigRollbackStrategy] as PrevConfigRB

    RBStrategy <|.. PrevConfigRB
  }
}

package "Configuration" {
  component [ExecutorProperties] as Props
  component [ExecutorConfiguration] as Config
  component [ExecutorAutoConfiguration] as AutoConfig
}

package "Factory" {
  component [PlanFactory] as PlanFactory
}

' Facade 依赖关系 (RF-01)
Facade --> DeployAppService : delegates
Facade ..> TaskCreationException : throws
Facade ..> TaskOperationException : throws
Facade ..> TaskNotFoundException : throws
Facade ..> PlanNotFoundException : throws

' Application Service 依赖关系 (RF-10 优化)
DeployAppService --> PlanCreator : delegates creation
DeployAppService --> PlanDS : uses
DeployAppService --> TaskDS : uses
DeployAppService --> PlanCreationResult : returns
DeployAppService --> PlanOperationResult : returns
DeployAppService --> TaskOperationResult : returns

PlanCreator --> PlanDS : uses
PlanCreator --> TaskDS : uses
PlanCreator --> StageFactory : uses
PlanCreator --> PlanCreationResult : returns

PlanCreationResult --> PlanInfo : contains
PlanInfo --> TaskInfo : contains list

' Domain Service 依赖关系 (RF-06 重构)
PlanDS --> PlanAgg : calls business methods
PlanDS --> PlanRepo : uses
TaskDS --> TaskAgg : calls business methods
TaskDS --> TaskRepo : uses
TaskDS --> RuntimeRepo : uses

' Orchestration 依赖关系
Orchestrator --> Scheduler
Orchestrator --> Conflict
Orchestrator --> WorkerFactory
Orchestrator --> PlanAgg

' Factory 依赖关系
PlanFactory --> PlanAgg
PlanFactory --> TaskAgg
StageFactory --> ServiceStage
StageFactory --> Step1
StageFactory --> Step2
StageFactory --> Step3
WorkerFactory --> Executor
WorkerFactory --> Heartbeat
WorkerFactory --> MetricsReg

' Scheduler 依赖关系
Scheduler --> Executor

' Executor 依赖关系
Executor --> TaskAgg
Executor --> Stage
Executor --> CPService
Executor --> EventSink
Executor --> StateManager
Executor --> Conflict
Executor --> MetricsReg
Executor --> Heartbeat

' StateManager 依赖关系
StateManager --> TaskSM
StateManager --> EventSink
StateManager --> TaskAgg
StateManager --> Verifier

' Stage 依赖关系
ServiceStage --> Step1
ServiceStage --> Step2
ServiceStage --> Step3
Step3 --> HealthClient

' Rollback 依赖关系
RBStrategy --> TaskAgg
RBStrategy --> EventSink
PrevConfigRB --> Stage

' Configuration 依赖关系
Config --> Props
Config --> Validator
Config --> StateManager
Config --> HealthClient
Config --> FacadeImpl
AutoConfig --> Props
AutoConfig --> CPService
AutoConfig --> RedisCP

note right of Facade
  **对外统一接口**
  - createSwitchTask
  - pauseTask / resumeTask
  - retryTask / rollbackTask
  - queryTaskStatus
end note

note right of Orchestrator
  **计划编排器**
  - 提交 Plan
  - 路由任务到 Scheduler
  - 管理租户冲突
end note

note right of Scheduler
  **任务调度器**
  - 并发控制（maxConcurrency）
  - FIFO 队列
  - 任务提交与完成管理
end note

note right of StateManager
  **状态管理器**
  - 管理状态机实例
  - 执行状态转换
  - 发布状态事件
  - 维护 sequenceId
end note

note right of Executor
  **任务执行引擎**
  - 顺序执行 Stage
  - MDC 注入与清理
  - Checkpoint 保存恢复
  - 心跳调度
  - 指标收集
end note

note right of CPService
  **Checkpoint 服务**
  - 可插拔存储
  - 批量恢复
  - 终态清理
end note

note right of EventSink
  **事件发布**
  - Spring 集成
  - Noop 实现
  - 事件幂等性
end note

@enduml

